@@ -5,7 +5,7 @@ AC_PREREQ([2.59])
 ## --------------------- ##
 ## Package configuration ##
 ## --------------------- ##
-AC_INIT([RobOptim core library], [0.1], [thomas.moulard@gmail.com],
+AC_INIT([RobOptim core library], [0.1], [roboptim-user@lists.sourceforge.net],
         [roboptim-core])
 
 # Auxiliary files.
