@@ -1,3 +1,10 @@
+2009-04-17  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Fix package information.
+	* configure.ac: Fix contact e-mail.
+	* roboptim-core.m4: Fix package name.
+	* src/doc.hh: Fix package URL.
+
 2009-04-16  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Change project's name.
